gatsby_fp/src/styles/facultyprofile.css
/* Styles for Faculty Profile */
body {
  font-family: "Chaparral W01", Georgia, Times, "Times New Roman", serif;
  font-style: normal;
  font-weight: 300;
  min-width: 300px;
  overflow-x: hidden;
  overflow-wrap: break-word;
}

.sectiontitle {
  font-family: "Trade Gothic W01", Arial, Helvetica, sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 1.875rem;
  color: #666666;
  padding-top: .4em;
  margin: 24px 0 12px;
  text-transform: none;
}
.bioimage{
  margin-right: 1.5em;
}

.flex_box{
  display: flex;
  flex-wrap: wrap;
}

.pf_field_wrapper > p{
  margin-top: 0;
  margin-bottom: 0;
  font-family: "Trade Gothic W01", Arial, Helvetica, sans-serif;
  font-style: normal;
  color: #383838;
}
.publicationtitle {
  font-size: 1.1em;
  font-weight: bold;
  text-transform: uppercase;
  padding-top: 1em;
}

.biotitle {
  color: #9D1535;
  padding-bottom: 0.5em;
}

a {
  color: #9D1535;
}

li {
  margin: 0 0 10px 0;   
  padding-left: 0.5em;
}

ul, ol {
  margin-left: -0.8em;
}

p {
  line-height: 25px;
}

.table_wrapper > .table_wrapper_inner > table > tbody > tr > td > .table_wrapper > .table_wrapper_inner > table > tbody > tr:first-child > td {
  font-family: "Chaparral W01",Georgia,Times,"Times New Roman",serif;
  padding: 0 0 15px;
  border-bottom: 1px solid #E0E0E0;
  font-size: 1.3em; 
}

.table_wrapper > .table_wrapper_inner > table > tbody > tr > td > .table_wrapper > .table_wrapper_inner > table > tbody > tr:nth-child(2) > td {
  padding-top: 20px;
}

.table_wrapper{
  margin-top: 0;
  margin-bottom: 0;
}

.table_wrapper:after {
  display: none;
}

.table td, table th{
  padding: 18px 30px;
  text-align: left;
}

table td {
  border-left: 0 solid white;
  border-right: 0 solid white;
  background: white; 
  padding-left: 0;
  padding-top: 5px;
  padding-bottom: 2px;
  font-size: 0.9em;
}

hr.top-bar{
  width: 100%;
  height: 3px;
  background: #9D1535;
  border: none;
  clear: both;
  margin: 0.5em 0 0.5em 0;
  padding: 0;
}

.title > p{
  font-family: "Chaparral W01",Georgia,Times,"Times New Roman",serif;
  padding: 0 0 15px;
  font-size: 1.3em; 
  margin: 0 0 0 0;
}

@media (max-width: 980px) {
  hr.top-bar {
    width: 100%;
    height: 3px;
    background: #9D1535;
    border: none;
    clear: both;
    margin: 3em 0 0.5em 0;
    padding: 0;
  }
}

@media (min-width: 550px){
  .bioimage{
    margin-right: 2%;
    width: 13em;
  }
  .flex_box{
    display: flex;
    flex-wrap: nowrap;
    flex-direction: row;
  }
  .pf_field_wrapper{
    flex-grow: 1;
  }
}

@media (max-width: 550px){
  .bioimage{
    margin-right: 1.5em;
    margin-bottom: .9em;
  }
}

